--- a/02-biosec.Rmd
+++ b/02-biosec.Rmd
@@ -86,35 +86,35 @@ Since AMD presents a large and increasing amount [@koelmansAllNotLost2017; @lebr
 
 The next thirty years of research show that the scope of impacts from rafting aboard AMD is potentially far more complex and pervasive. Fouling organisms, multicellular plants and animals which grow attached to the surface of an object immersed in water, have been found on AMD in every marine region [@kiesslingMarineLitterHabitat2015; @alvespovoaFoulingOrganismsMarine2021] on beaches both remote [@rechTravellingLightFouling2018] and highly urbanised [@mirallesAlertCallingPort2018]. In oceans and seas, this fouling community has been shown to attract and support communities of mobile predators and grazers [@tutmanFloatingMarineLitter2017; @whitneySurfaceSlicksAre2021]. Among these associated organisms are those with histories of causing harm when established outside of their native range [@mirallesAlertCallingPort2018; @shabaniAssemblageEncrustingOrganisms2019]. Even at the microbial level, AMD has been shown to carry pathogens harmful to humans and wildlife [@audrezetBiosecurityImplicationsDrifting2021; @virsekMicroplasticsVectorTransport2017]. The distances travelled by AMD and these problematic species are much further than any recorded aboard natural substrate [@simkaninExploringPotentialEstablishment2019].
 
-### Natural versus artificial
+### Natural versus artificial  
 
-This abundance of material and its capacity for long-distance dispersal of hitch-hikers distinguish AMD from historical modes of oceanic rafting. Natural materials are capable of facilitating long-distance dispersal [@talaLongtermPersistenceFloating2019]. however their abundance at the ocean's surface are often tied to natural phenomena like seasons or storms [@hinojosaTemporalSpatialDistribution2011] and may be limited in how far they travel by physical and biological degradation [@rothauslerMercyWindsSeasonal2021]. Common sources of AMD [@koelmansAllNotLost2017], such as riverine and stormwater outflows, typically discharge some volume of material to the ocean year-round. Products manufactured from plastics, wood, rubber, and other artificial or enhanced materials typically have few means of natural degradation which slowly degrade the material over decades to centuries [@gewertPathwaysDegradationPlastic2015]. This means that AMD can arrive and persist at times and in places where natural debris is highly unlikely. 
+This abundance of material and its capacity for long-distance dispersal of hitch-hikers distinguish AMD from historical modes of oceanic rafting. Natural materials are capable of facilitating long-distance dispersal [@talaLongtermPersistenceFloating2019]. However, their abundance at the ocean's surface are often tied to natural phenomena like seasons or storms [@hinojosaTemporalSpatialDistribution2011]. This abundance, as well as how far they can travel, may be also be limited by degradation caused by many physical, chemical, and biological processes [@rothauslerMercyWindsSeasonal2021].  
 
-Direct comparisons of the organisms living on AMD with those on natural debris has also mostly disproved initial observations of similarity between the two. Cosmopolitan species like gooseneck barnacles (**Lepas sp.**) and certain cheliostome bryozoans like **Electra tenella** are common to both. The rest of the community, however, has often been shown to vary significantly [@citekey; @citekey]. Studies have shown that some invasive species and pathogenic microbes are significantly more common on AMD [@citekey], while others were found to raft only on AMD [@citekey].
+In contrast, common sources of AMD [@koelmansAllNotLost2017], such as riverine and stormwater outflows, typically discharge some volume of material to the ocean year-round. Products manufactured from plastics, wood, rubber, and other artificial or enhanced materials are, often deliberately, resistant to physical and chemical degradation and there are few known organisms capable of metabolising or otherwise breaking them down [@gewertPathwaysDegradationPlastic2015]. This may be why AMD has been observed to arrive and persist at times, in places, and in quantities in which natural debris would be highly unlikely [@ruiz-orejonQuarterlyVariabilityFloating2019; @guerrero-meseguerSpatioTemporalVariabilityAnthropogenic2020; @jaskolskiTrashArcticBeach2018].  
 
 ### Dispersal potential
 
-All organisms with the capacity to use AMD as habitat may be more able to shift the boundaries of their known ranges and disperse over very long distances. Abundant substrates, particularly around urban areas [@citekey] or after natural disasters [@citekey], could offer these organisms more chances and at more optimal times of year to establish populations in new, previously inaccessible, areas. This could help maintain more biodiversity as suitable habitats shift around with climate change. AMD associated organisms may be more likely to randomly find their new habitable range than those not able to utilize it. 
+This could mean that organisms with the capacity to use AMD as habitat are more able to shift the boundaries of their known ranges and disperse over very long distances. Abundant substrates, particularly around urban areas [@citekey] or after natural disasters [@citekey], could offer these organisms more chances and at more optimal times of year to establish populations in new, previously inaccessible, areas. This could help mitigate losses to marine biodiversity as suitable habitats shift around with climate change. AMD associated organisms may be more likely to randomly find their new habitable range than those not able to utilize it. 
 
 However, this same process may also increase the likelihood that invasive species spread to areas beyond the site of their initial incursion (secondary invasion) or to regions far beyond the reach of natural sources of population control. When the Tohuku-Oki earthquake caused a tsunami that flooded the area surrounding Fukushima Daiichi, Japan in 2011, entire communities of marine life were transported across the North Pacific on thousands of items ranging from household litter to entire piers [@Carlton2017]. No natural substrate, like driftwood, has even been documented making that same trip [@citekey]. These organisms, separated by tens of thousands of kilometers and hundreds of thousands of years of evolution, were only able to make the trans-Pacific journey because of AMD. Dozens of them were identified as species with histories of invasion [@citekey].
 
-Numerous other studies have documented shorter distance travel aboard debris to new locations just outside of a species known range [@citekey; @citekey]. Through short hops from ports areas, seen in @Miralles2014, AMD has the potential to expand the spatial extent of incursions in these types of invasion hotspots into a large, low-density halo around the initial site. Likely due to its inherently random, omnipresent, and indirect character compared to other ways that humans transport organisms in the marine environment, AMD has not yet been soley implicated in any introduction of an invasive species. However, its documented ability to transport marine organisms merits its consideration among other modes of transporting potentially harmful organisms [@Audrézet2021], known as **introduction vectors**. 
+Numerous other studies have documented shorter-distance travel aboard debris to new locations just outside of a species known range [@citekey; @citekey]. Through short hops from ports areas, seen in @Miralles2014, AMD has shown its potential to expand the spatial extent of incursions in these types of invasion hotspots. The inherently random, omnipresent, and indirect character of AMD which would make these halos difficult to search or monitor for this effect also makes it difficult to implicate it in an introduction with any certainty. However, with the absence of other modes of introduction, known as **introduction vectors**, AMD has been reasonably suggested as the source of a recent spread of the **Mytilus** species complex (containing known invasive species) to a remote island in the Arctic circle [@kotwickiReappearanceMytilusSpp2021]. 
 
-### AMD as a vector
+### AMD as a pathway
 
-In the context of marine biosecurity, introduction vector refers to a way that humans transport species around oceans and seas. **Pathways** are the common trajectories taken by those vectors, such as high-traffic shipping lanes. Some species transported by vectors along pathways are designated by regulatory or management bodies as **invasive species**. This designation is generally given once it has been demonstrated that the species causes significant harm to human and/or natural systems. Invasive species are typically associated with a specific vector, or set of vectors, known to facilitate their dispersal. AMD could be considered a vector for each of the hundreds of species known to use it as habitat [@citekey].
+In the context of marine biosecurity, introduction pathway refers to a way that humans transport species around oceans and seas. **Vectors** are the common trajectories taken by those pathways, such as high-traffic shipping lanes. Some species transported by pathways along vectors are designated by regulatory or management bodies as **invasive species**. This designation is generally given once it has been demonstrated that the species causes significant harm to human and/or natural systems. Invasive species are typically associated with a specific pathway, or set of vectors, known to facilitate their dispersal. AMD could be considered a pathway for each of the hundreds of species known to use it as habitat [@citekey].
 
 A 2021 meta-analysis estimated that harms related to aquatic invasive species, combining both freshwater and marine environments, cost the global economy a total of 23 million USD in 2020 alone [@Cuthbert2021]. These costs may arise directly from mitigation efforts and lost revenues in fisheries [@Schwoerer2019] or damage to infrastructure [@Park1999], among other economic impacts. Beyond monetary costs, invasive species can change how ecosystems function, altering the composition of native species [@Jackson2017] and reducing the services those ecosystems provide to human communities [@Katsanevakis2014]. 
 
-Characterisation of distinct introduction vectors facilitates a border-focussed biosecurity strategy, suggested to be the most efficient means of preventing and responding to incursions of NIS [@Hewitt2007]. Doing so for AMD requires delineating common pathways, identifying sinks along coastline where there is a higher concentrations of arrivals, describing the physical environment encountered by organisms transported aboard the vector and along the pathway, and compiling species known to use the vector [@Faulkner2020]. In the case of AMD as an introduction vector, this characterisation can be pulled from decades of tangential research in oceanography, materials science, and marine biology [@Audrézet2021; @Bergmann2015]. 
+Characterisation of distinct introduction pathways facilitates a border-focussed biosecurity strategy, suggested to be the most efficient means of preventing and responding to incursions of NIS [@Hewitt2007]. Doing so for AMD requires delineating common vectors, identifying sinks along coastline where there is a higher concentrations of arrivals, describing the physical environment encountered by organisms transported aboard the pathway and along the vector, and compiling species known to use the pathway [@Faulkner2020]. In the case of AMD as an introduction pathway, this characterisation can be pulled from decades of tangential research in oceanography, materials science, and marine biology [@Audrézet2021; @Bergmann2015]. 
 
 ### Assessing the potential of AMD
 
-To facilitate assessment of AMD as a vector, this study combined a 2021 database of published records of organisms associated with anthropogenic marine debris (OAAMD) [@McMains2022] with the World Register of Introduced Marine Species (WRiMS) [@Rius2020], to compare the frequency of invasive species found on AMD with that of the rest of the comparable marine environment. This combination of sources also enabled the assessment of spatial and methodological patterns in records of invasive species on AMD. Combined with a comprehensive list of invasive species found on AMD, this investigation aimed to delineate which species use this vector and characterise patterns in its pathways. 
+To facilitate assessment of AMD as a pathway, this study combined a 2021 database of published records of organisms associated with anthropogenic marine debris (OAAMD) [@McMains2022] with the World Register of Introduced Marine Species (WRiMS) [@Rius2020], to compare the frequency of invasive species found on AMD with that of the rest of the comparable marine environment. This combination of sources also enabled the assessment of spatial and methodological patterns in records of invasive species on AMD. Combined with a comprehensive list of invasive species found on AMD, this investigation aimed to delineate which species use this pathway and characterise patterns in its vectors. 
 
 ### Material types
 
-Not all substrates categorised as AMD provide the same type of habitat and certain substrates are more associated with certain pathways. These distinctions often do not fall along the same lines as those useful when sorting debris found on the beach. As such, the way AMD is categorised for the purposes of this study is different than in many others. The categorisation described below also accomodates reporting gaps in the literature and groups substrates into categories broad enough to be statistically useful.
+Not all substrates categorised as AMD provide the same type of habitat and certain substrates are more associated with certain patterns of movement through the ocean's surface layer. These distinctions often do not fall along the same lines as those useful when sorting debris found on the beach. As such, the way AMD is categorised for the purposes of this study is different than in many others. The categorisation described below also accomodates reporting gaps in the literature and groups substrates into categories broad enough to be statistically useful.
 
 #### Fishing gear
 
@@ -269,10 +269,10 @@ However, this observation could also arise from methodological factors. Shipping
 
 It was common within the OAAMD for the community to be reported as a value add within tangential studies, particularly studies related to measuring the volume or mass of debris itself. In these cases, it is unlikely that the entire AMD associated community was rigorously catalogued. Increased familiarity with NIS, and external incentives to identify and publish about them, may have increased the frequency at which NIS were reported relative to other taxa in these studies. Misidentifications as NIS may also have occurred in regions with morphologically similar native species, such as XX and XX [@citekey] due to non-specialist taxonomic identification methods.
 
-Consideration of these methodological factors adds important context to the increased proportion of NIS found on anthropogenic debris. Within this context, though, there remains a total XX observations of XX unique listed invasive species on AMD. As an introduction vector, AMD may well be facilitating the spread of these listed invasive species. 
+Consideration of these methodological factors adds important context to the increased proportion of NIS found on anthropogenic debris. Within this context, though, there remains a total XX observations of XX unique listed invasive species on AMD. As an introduction pathway, AMD may well be facilitating the spread of these listed invasive species. 
 
 The significant relationship between urban areas and NIS on debris items suggests the ability of anthropogenic debris to enable secondary introductions to remote regions. Secondary introductions, or the transport and establishment of new populations of NIS outside of their initial location, significantly increase the difficulty of eliminating exotic species [@citekey]. This is particularly true when secondary introductions occur outside of known high-risk areas with frequent monitoring, like ports [@citekey]. The potential of AMD to facilitate passive secondary introductions may require NIS response plans for species known to foul the substrate to broaden their monitoring programs to include nearby regional beaches.  
 
 Longer trips, such as those seen by Carlton et. al when studying debris items from the Japanese tsunami, might be far more likely during similar extreme events when large debris flows are quickly washed offshore. No other study has looked at this effect, although annual events such as monsoon and hurricane seasons may force debris out to sea in similar quantities.  Japanese tsunami debris overall showed XX% NIS among its community, a total of XX taxa, and XXX records of Mytilus galloprovincialis [@citekey], the Mediterranean mussel, across XX objects. Similar extreme events could also cause repeated introductions of genetically diverse and sexually mature organisms in a short time span, thereby sharply increasing the likelihood of successful establishment of an exotic species in a new region [@citekey]. 
 
-In either scenario, AMD shows its potential as a vector for marine organisms to expand outside of their native range, and, potentially, cause ecological and economic harm to coastlines. It creates an abundance of habitat suitable for NIS transported through other, more highly regulated, vectors like shipping and aquaculture. Secondary introductions outside of monitored areas via the AMD vector may require a shift in marine biosecurity protocols and long-distance dispersal aboard AMD presents an entirely novel type of biosecurity threat. This study has established that not only are plastics and other synthetic materials capable of providing habitat to a diverse range of listed pest species, but that these species may be far more likely to be found in the AMD ecosystem.
+In either scenario, AMD shows its potential as a pathway for marine organisms to expand outside of their native range, and, potentially, cause ecological and economic harm to coastlines. It creates an abundance of habitat suitable for NIS transported through other, more highly regulated, vectors like shipping and aquaculture. Secondary introductions outside of monitored areas via the AMD pathway may require a shift in marine biosecurity protocols and long-distance dispersal aboard AMD presents an entirely novel type of biosecurity threat. This study has established that not only are plastics and other synthetic materials capable of providing habitat to a diverse range of listed pest species, but that these species may be far more likely to be found in the AMD ecosystem.
