adding content to intro

--- a/00-intro.Rmd
+++ b/00-intro.Rmd
@@ -26,7 +26,7 @@ You can see the old cities, still everywhere, the bones and bricks go to dust, b
 
 ## Introduction
 
-Plastic pollution is altering marine ecosystems. At the ocean's surface, plastic and other materials manufactured by humans represent a large and growing proportion of floating material [@Koelmans2017] that can be used by plants, animals, and other organisms in ways that may fundamentally alter how they live. These organisms, known as neuston, are adapted to life within the dynamic boundary layer of water and air and the unique challenges it presents to their physiology. Neuston survive an environment with extreme fluctuations of temperature, salinity, and nutrient availability. The addition of anthropogenic marine debris (AMD) to this unique environment presents a significant shift in the availability of solid substrate, a previously limiting resource, and may therefore initiate shifts in both how it functions and interacts with the rest of the ocean.
+Plastic pollution is altering marine ecosystems [@citekey; @citekey]. The growing mass of plastic, fishing gear, synthetic clothing, and other artifacts of the Anthropocene [@citekey] break down slowly and accumulate at the surface and seafloor of every ocean on Earth. This anthropogenic marine debris (AMD) represents a large and growing proportion of the floating material [@Koelmans2017] that can be used by plants, animals, and other organisms as habitat [@citekey] and a mode of travel [@citekey]. While AMD does not adapt to its surroundings, life does adapt to and around it [@citekey]. These co-occuring organisms, known as neuston, are adapted to life within the dynamic boundary layer of water and air and the unique challenges it presents to their physiology. Neuston survive an environment with extreme fluctuations of temperature, salinity, and nutrient availability. The addition of anthropogenic marine debris (AMD) to this unique environment presents a significant shift in the availability of solid substrate, a previously limiting resource, and may therefore initiate shifts in both how it functions and interacts with the rest of the ocean.
 
 ## Characteristics of anthropogenic marine debris
 
